NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/bad_sign.cab
version https://git-lfs.github.com/spec/v1
oid sha256:5597751d8f416540180337e947143749ae129ac6d23885455f7553b178fb087d
size 13321
